# twitch-interactive-avatar-poc

./: .env  .gitignore  README.md  main.py  pyproject.toml  scripts.py
logic/: heygen_client.py  livekit_room.py  stream_logic.py  twitch_client.py
models/: stream_models.py
